--- a/configuration/config.properties
+++ b/configuration/config.properties
@@ -5,3 +5,10 @@ explicitWait = 20
 excelPath = src/main/resources/AutoTestData.xlsx
 excelSheet = Objects
 excelSheetMap = Maps
+excelSheetMap = Maps
+dbHost = localhost
+dbName = xe
+dbPort = 1521
+dbUser = hr
+dbPass = hr
+dbQuery = select * from countries
